# sufe-client

./: .editorconfig  .gitignore  Cargo.toml  README.md  SETUP.md  index.html  justfile  优化方案-参考FlClash与clash-verge.md  审计报告.md
.github/workflows/: ci.yml  mobile.yml  release.yml
android/: .gitignore  README.md  bootstrap-wrapper.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/xboard/client/: AppContainer.kt  MainActivity.kt  XboardApp.kt
android/app/src/main/kotlin/com/xboard/client/nav/: AppNavHost.kt  Routes.kt
android/app/src/main/kotlin/com/xboard/client/secure/: AndroidSecureStore.kt
android/app/src/main/kotlin/com/xboard/client/ui/components/: Common.kt
android/app/src/main/kotlin/com/xboard/client/ui/screens/: ComposerSheet.kt  ConnectScreen.kt  ForgetPasswordScreen.kt  HomeScreen.kt  LoginScreen.kt  NodesSheet.kt  NoticesScreen.kt  OrdersScreen.kt  PlansScreen.kt  PurchaseSheet.kt  RegisterScreen.kt  TicketDetailScreen.kt  TicketsScreen.kt
android/app/src/main/kotlin/com/xboard/client/ui/theme/: XboardTheme.kt
android/app/src/main/kotlin/com/xboard/client/util/: Format.kt
android/app/src/main/kotlin/com/xboard/client/vm/: AppViewModel.kt  UiState.kt
android/app/src/main/kotlin/com/xboard/client/vpn/: AndroidTunDelegate.kt  VpnBinder.kt  XboardVpnService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification_vpn.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/gradle/: libs.versions.toml
ci/scripts/: build-core-ios.sh  build-desktop-manifest.sh  build-uniffi-swift.sh  generate-release-keys.sh  install-helper-sidecar.sh  install-libbox-ios.sh  install-mihomo-android.sh  install-mihomo-sidecar.sh  install-svc-sidecar.sh  mirror-mihomo.sh
core/: Cargo.toml  build.rs  uniffi.toml
core/src/: error.rs  ffi.udl  lib.rs
core/src/api/: auth.rs  client.rs  guest.rs  mod.rs  notice.rs  order.rs  plan.rs  serde_helpers.rs  ticket.rs  types.rs  user.rs
core/src/ffi/: client.rs  errors.rs  manager.rs  mod.rs  observer.rs  secure.rs  types.rs
core/src/ipc/: mod.rs
core/src/kernel/: driver.rs  ipc.rs  launcher.rs  manager.rs  mihomo.rs  mod.rs  xray.rs
core/src/profile/: fetcher.rs  inject.rs  inject_singbox.rs  mod.rs
core/src/storage/: db.rs  mod.rs  secure.rs
core/src/tunnel/: mod.rs  proxy_settings.rs  system_proxy.rs
core/src/updater/: app.rs  kernel.rs  mod.rs
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  api.ts  main.ts  router.ts  types.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/build_extras/: postinst-rpm.sh  postinst.sh
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  error.rs  helper_install.rs  lib.rs  main.rs  persistence.rs  state.rs  svc_install.rs
desktop/src-tauri/src/commands/: auth.rs  billing.rs  connection.rs  guest.rs  helper.rs  kernel.rs  meta.rs  mod.rs  nodes.rs  notice.rs  session.rs  ticket.rs  user.rs
desktop/src/components/: CaptchaWidget.vue  HomeIconRail.vue  HomeTopBar.vue  NodeRail.vue  PurchaseModal.vue  StatusHero.vue  TrafficChart.vue  WorldMap.vue
desktop/src/i18n/: en-US.ts  index.ts  zh-CN.ts
desktop/src/pages/: Connections.vue  ForgetPassword.vue  Home.vue  Login.vue  Logs.vue  Notices.vue  Orders.vue  Plans.vue  Register.vue  Rules.vue  Settings.vue  TicketDetail.vue  Tickets.vue
desktop/src/stores/: auth.ts  connection.ts  nodes.ts  plan.ts  site.ts  theme.ts
desktop/src/styles/: global.css
desktop/src/utils/: error.ts  geo.ts
helper/: Cargo.toml
helper/src/: main.rs
helper/tests/: ipc_smoke.rs
ios/: .gitignore  README.md  bootstrap.sh  project.yml
ios/PacketTunnel/: PacketTunnelProvider.swift
ios/XboardClient/: AppModel.swift  ConnectionController.swift  SecureStore.swift  XboardClientApp.swift
ios/XboardClient/Resources/en.lproj/: Localizable.strings
ios/XboardClient/Resources/zh-Hans.lproj/: Localizable.strings
ios/XboardClient/Views/: ConnectView.swift  ForgetPasswordView.swift  Helpers.swift  HomeView.swift  LoginView.swift  NodesSheet.swift  NoticesView.swift  OrdersView.swift  PlansView.swift  PurchaseSheet.swift  RegisterView.swift  RootView.swift  TicketComposerSheet.swift  TicketDetailView.swift  TicketsView.swift
svc/: Cargo.toml
svc/src/: main.rs
update-server/: README.md
