[workspace]
resolver = "2"
members = ["core", "desktop/src-tauri", "helper", "svc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xboard-client contributors"]
license = "MIT"
rust-version = "1.78"
repository = "https://github.com/example/xboard-client"

[workspace.dependencies]
# Async runtime / abstractions
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process", "signal", "net"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client (rustls only — keeps Android cross-compile painless)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }

# Stream adapters used by the kernel control client (chunked /traffic, /logs)
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error & logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# Crypto
ring = "0.17"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
hex = "0.4"

# Time / URL / IDs
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Misc
secrecy = { version = "0.10", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
anyhow = "1"

# OS keychain (desktop only — gated by target_os in core/Cargo.toml).
# Native backends only — avoids pulling in libdbus on Linux musl builds and
# keeps cross-compile friendly. `linux-native-sync-persistent` uses
# org.freedesktop.secrets without any tokio fanfare.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[profile.dev]
opt-level = 1
